# bouzuya-firestore-client

./: .gitignore  AGENTS.md  Cargo.toml  README.md  compose.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
firebase/: Dockerfile
src/: collection_id.rs  collection_path.rs  collection_reference.rs  device.rs  document_id.rs  document_path.rs  document_reference.rs  document_snapshot.rs  error.rs  field_path.rs  filter.rs  firestore.rs  firestore_client.rs  firestore_options.rs  into_field_path.rs  into_filter.rs  lib.rs  precondition.rs  query.rs  query_document_snapshot.rs  query_snapshot.rs  set_options.rs  timestamp.rs  transaction.rs  transaction_options.rs  write_result.rs
tests/: bouzuya_firestore_client.rs  lint.rs
tests/collection_reference/: add.rs  doc.rs  end_at.rs  end_before.rs  firestore.rs  get.rs  id.rs  limit.rs  list_documents.rs  main.rs  offset.rs  order_by.rs  parent.rs  path.rs  select.rs  start_after.rs  start_at.rs  where_.rs
tests/document_reference/: collection.rs  create.rs  delete.rs  firestore.rs  get.rs  id.rs  impl_clone.rs  impl_debug.rs  impl_eq.rs  impl_partial_eq.rs  list_collections.rs  main.rs  parent.rs  path.rs  set.rs  update.rs
tests/document_snapshot/: clone.rs  create_time.rs  data.rs  exists.rs  id.rs  main.rs  ref_.rs  update_time.rs
tests/error/: custom.rs
tests/field_path/: document_id.rs  impl_display.rs  impl_eq.rs  impl_from_str.rs  impl_partial_eq.rs  main.rs  new.rs
tests/filter/: and.rs  main.rs  or.rs  where_.rs
tests/firestore/: collection.rs  database_id.rs  doc.rs  get_all.rs  impl_debug.rs  impl_eq.rs  impl_partial_eq.rs  list_collections.rs  main.rs  new.rs  run_transaction.rs
(+142 files in other folders)
