[package]
name = "bouzuya-firestore-client"
version = "2.1.0"
edition = "2024"

[dependencies]
firestore-path = "1"
firestore-structured-query = "0.29.0"
google-cloud-auth = "1"
http = "1"
prost-types = "0.14.3"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde-firestore-value = "0.27.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = [
    "transport",
    "tls-ring",
    "tls-webpki-roots",
] }

[dev-dependencies]
anyhow = "1"
serial_test = "3"
